# billybjork.com

./: .env.example  .gitignore  .zshrc  PROMPT-test-2.md  Procfile  README.md  REMOTE_EDIT_MODE.md  config.py  dependencies.py  esbuild.config.mjs  filters.py  main.py  nixpacks.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
app/: main.py
content/: about.md  assets.json  settings.json  test_projects.json
content/projects/: 10000-lakes-wakesurf-open-2017.md  airdrop.md  albin-lee-meldau-before-after.md  american-authors-beyond-the-barricade.md  aspiration-nation.md  autocamp-yosemite.md  began-working-at-openstore.md  began-working-at-tubescience.md  being-careful.md  billy-mov.md  clickbait.md  (+67 more)
middleware/: cache_control.py  forwarded_proto.py  security_headers.py
routers/: admin.py  admin_payload.py  admin_video_state.py  api.py  auth.py  feed.py  pages.py  test.py  test_2.py  valentine.py
templates/: 404.html  500.html  about.html  about_edit.html  base.html  footer.html  index.html  infinite_scroll_sentinel.html  project.html  project_create.html  project_detail.html  project_details.html  project_edit.html  projects_infinite_scroll.html  test-2.html  test-3.html  test.html  thumbnail.html  valentine.html
tools/: extract_aligned_rgb.py  generate_rgbd_sprite_sheets.py  generate_valentine_preview.py  regenerate_hero_posters_first_frame.py  segment_valentine_images.py  video_depth_modal.py
utils/: __init__.py  analytics.py  assets.py  content.py  content_sync.py  image.py  media_paths.py  s3.py  static_assets.py  video.py
(+99 files in other folders)
